Thêm: Thêm Xóa Sửa Danh mục hàng hóa dịch vụ

--- a/SpaNewYork/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/SpaNewYork/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -58,7 +58,7 @@
                                         </a>
                                     </li>
                                     <li>
-                                        <a class="dropdown-item" asp-area="Admin" asp-controller="KhachHang" asp-action="Index">
+                                        <a class="dropdown-item" asp-area="Admin" asp-controller="DanhMucKhachHang" asp-action="Index">
                                             <i class="fa-light fa-fw fa-user"></i> Khách hàng
                                         </a>
                                     </li>
