--- a/SpaNewYork/Areas/Admin/Views/DanhMucHangHoaDichVu/Create.cshtml
+++ b/SpaNewYork/Areas/Admin/Views/DanhMucHangHoaDichVu/Create.cshtml
@@ -3,11 +3,18 @@
 @{
     ViewData["Title"] = "Thêm danh mục hàng hóa & dịch vụ";
 }
+
 <div class="card">
     <h5 class="card-header">@ViewData["Title"]</h5>
     <div class="card-body">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
+            <div class="mb-3">
+                <label asp-for="NhomHHDV" class="control-label"></label>
+                <input asp-for="NhomHHDV" type="number" class="form-control" min="1" />
+                <span asp-validation-for="NhomHHDV" class="text-danger"></span>
+            </div>
 
             <div class="mb-3">
                 <label asp-for="MaHHDV" class="control-label"></label>
@@ -23,7 +30,7 @@
 
             <div class="mb-3">
                 <label asp-for="GiaBan" class="control-label"></label>
-                <input asp-for="GiaBan" class="form-control" type="number" step="0.01" />
+                <input asp-for="GiaBan" type="number" class="form-control" step="0.01" />
                 <span asp-validation-for="GiaBan" class="text-danger"></span>
             </div>
 
@@ -33,6 +40,12 @@
                 <span asp-validation-for="DonViTinh" class="text-danger"></span>
             </div>
 
+            <div class="mb-3">
+                <label asp-for="MoTa" class="control-label"></label>
+                <textarea asp-for="MoTa" class="form-control"></textarea>
+                <span asp-validation-for="MoTa" class="text-danger"></span>
+            </div>
+
             <div class="mb-0">
                 <button type="submit" class="btn btn-primary"><i class="fa-light fa-floppy-disk"></i> Thêm mới</button>
                 hoặc <a asp-action="Index">Quay về danh sách</a>
@@ -40,8 +53,19 @@
         </form>
     </div>
 </div>
+
 @section Scripts {
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
     }
+    <script src="~/lib/ckeditor5/ckeditor.js"></script>
+    <script>
+        ClassicEditor.create(document.querySelector('#MoTa'), {
+            licenseKey: '',
+        }).then(editor => {
+            window.editor = editor;
+        }).catch(error => {
+            console.error(error);
+        });
+    </script>
 }
