--- a/SpaNewYork/Areas/Admin/Views/DanhMucKhachHang/Details.cshtml
+++ b/SpaNewYork/Areas/Admin/Views/DanhMucKhachHang/Details.cshtml
@@ -1,60 +1,39 @@
 ﻿@model SpaNewYork.Models.DanhMucKhachHang
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Chi tiết khách hàng";
 }
 
-<h1>Details</h1>
+<h1 class="text-center text-primary">Chi tiết khách hàng</h1>
 
-<div>
-    <h4>DanhMucKhachHang</h4>
+<div class="card shadow p-4 mb-4 bg-white rounded">
+    <h4 class="text-secondary">Thông tin khách hàng</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.LoaiKhachHang)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.LoaiKhachHang)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.MaKhachHang)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.MaKhachHang)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.TenKhachHang)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.TenKhachHang)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.SoDienThoai)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.SoDienThoai)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DiaChi)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DiaChi)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.GhiChu)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.GhiChu)
-        </dd>
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.NgaySinh)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.NgaySinh)
-        </dd>
+        <dt class="col-sm-3 font-weight-bold">Loại khách hàng</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.LoaiKhachHang)</dd>
+
+        <dt class="col-sm-3 font-weight-bold">Mã khách hàng</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.MaKhachHang)</dd>
+
+        <dt class="col-sm-3 font-weight-bold">Tên khách hàng</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.TenKhachHang)</dd>
+
+        <dt class="col-sm-3 font-weight-bold">Số điện thoại</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.SoDienThoai)</dd>
+
+        <dt class="col-sm-3 font-weight-bold">Địa chỉ</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.DiaChi)</dd>
+
+        <dt class="col-sm-3 font-weight-bold">Ghi chú</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.GhiChu)</dd>
+
+        <dt class="col-sm-3 font-weight-bold">Ngày sinh</dt>
+        <dd class="col-sm-9">@Html.DisplayFor(model => model.NgaySinh)</dd>
     </dl>
 </div>
-<div>
-    <a asp-action="Edit" asp-route-id="@Model?.STT">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+
+<div class="text-center">
+    <a asp-action="Edit" asp-route-id="@Model?.STT" class="btn btn-warning"><i class="fas fa-edit"></i> Sửa</a>
+    <a asp-action="Index" class="btn btn-secondary"><i class="fas fa-arrow-left"></i> Quay lại</a>
 </div>
