--- a/SpaNewYork/Areas/Admin/Views/DanhMucKhachHang/Create.cshtml
+++ b/SpaNewYork/Areas/Admin/Views/DanhMucKhachHang/Create.cshtml
@@ -25,13 +25,13 @@
 
         <div class="form-group">
             <label asp-for="TenKhachHang" class="control-label">Tên khách hàng</label>
-            <input asp-for="TenKhachHang" class="form-control" />
+            <input asp-for="TenKhachHang" class="form-control" required />
             <span asp-validation-for="TenKhachHang" class="text-danger"></span>
         </div>
 
         <div class="form-group">
             <label asp-for="SoDienThoai" class="control-label">Số điện thoại</label>
-            <input asp-for="SoDienThoai" class="form-control" />
+            <input asp-for="SoDienThoai" class="form-control" required />
             <span asp-validation-for="SoDienThoai" class="text-danger"></span>
         </div>
 
@@ -68,7 +68,7 @@
         document.addEventListener("DOMContentLoaded", function () {
             function updateCustomerCode() {
                 let loaiKH = document.getElementById("loaiKhachHang").value;
-                fetch("/DanhMucKhachHang/GetNextCustomerCode?loaiKH=" + loaiKH)
+                fetch("/Admin/DanhMucKhachHang/GetNextCustomerCode?loaiKH=" + loaiKH)
                     .then(response => response.text())
                     .then(data => {
                         document.getElementById("inputMaKhachHang").value = data;
